frontend/test/should_fail/keepOneForEach_iterated_unknown_accumulation_method.grg
test t
{
	iterated it {
	---
		def var i:int;
		def var j:int;
	} \ keepOneForEach<i>Accumulate<j>By<blub>
}
